--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"test": "jest"
 	},
 	"dependencies": {
 		"antd": "^5.24.1",
@@ -25,5 +26,14 @@
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"prettier": "3.5.2",
 		"vite": "^6.2.0"
+	},
+	"jest": {
+		"testEnvironment": "jsdom",
+		"transform": {
+			"^.+\\.jsx?$": "babel-jest"
+		},
+		"modulePathIgnorePatterns": [
+			"<rootDir>/frontend/package.json"
+		]
 	}
 }
