--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "1.0.0",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
@@ -11,5 +12,24 @@
 	"description": "",
 	"dependencies": {
 		"express": "^4.21.2"
+	},
+	"devDependencies": {
+		"@babel/preset-env": "^7.26.9",
+		"@babel/preset-react": "^7.26.3",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.2.0",
+		"babel-jest": "^29.7.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"react-test-renderer": "^19.0.0"
+	},
+	"jest": {
+		"testEnvironment": "jsdom",
+		"transform": {
+			"^.+\\.jsx?$": "babel-jest"
+		},
+		"modulePathIgnorePatterns": [
+			"<rootDir>/frontend/package.json"
+		]
 	}
 }
